--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -14,15 +13,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RideShareApp"
         tools:targetApi="31">
+
+        <!-- ✅ Login Activity as the launcher -->
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <!-- Other activities -->
+        <activity android:name=".SignUpActivity" />
+        <activity android:name=".MainActivity" />
+
+    </application>
 </manifest>
